devops/nmrxiv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nmrxiv-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nmrxiv-docs-ip-address
    networking.gke.io/managed-certificates: nmrxiv-docs-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: nmrxiv-docs-gke-service
      port:
        number: 80
